BAP-20198: Disable WSSE functionality (#40234)
